--- a/suchmuch-urdu.html
+++ b/suchmuch-urdu.html
@@ -78,7 +78,9 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
             <h2 class="label">Suchmuch Urdu</h2>
-            <p>Cuddle Maker is an enchanting brand born from a profound passion for children's illustrations and patterns. I have woven a heartwarming identity design around the basic shapes, to evoke a sense of playful nostalgia.<br>The vision was to bring comfort and magic of bedtime rituals to life through personalized keepsakes.</p>
+            <p>Suchmuch Urdu is your one-stop shop for engaging and effective Urdu learning resources for children! We believe learning a new language should be fun, interactive, and accessible to all ages.<br>Developed with Love: All our resources are created with a passion for fostering a love for the Urdu language in young learners.
+            <br>Fun & Educational: We combine engaging activities and playful design with effective learning techniques, making Urdu accessible and enjoyable for children.
+            <br>Parent & Kid Approved: With over 100 downloads and positive feedback from parents and kids alike, Suchmuch Urdu is a trusted resource for making Urdu learning a fun family experience.</p>
           </div>
         </div>
       </div>
