--- a/Shop-Qatar.html
+++ b/Shop-Qatar.html
@@ -89,7 +89,7 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <img src="assets/img/sq-1.jpg" alt="Image" class="img-fluid">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+              <p>The poster designs.</p>
               <img src="assets/img/sq-2.jpg" alt="Image" class="img-fluid">
               <img src="assets/img/sq-5.jpg" alt="Image" class="img-fluid">
               <img src="assets/img/sq-6.jpg" alt="Image" class="img-fluid">
