--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <img class="img-fluid" src="assets/img/img_2.jpg">
               <div class="work-info">
                 <h3>Shop Qatar</h3>
-                <span>Branding</span>
+                <span>Branding, Illustration</span>
               </div>
             </a>
           </div>
