--- a/Shop-Qatar.html
+++ b/Shop-Qatar.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Rowa Mahmood - Designer│Illustrator - Shop Qatar</title>
+  <title>Rowa Mahmood - Designer│Illustrator - Cuddle Maker</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-    <!-- Favicons -->
+  <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -113,7 +113,7 @@
                   <li>Illustration</li>
                 </ul>
 
-                <!-- <p><a href="https://www.instagram.com/cuddlemaker/"  target="_blank" class="readmore">Visit Cuddle Maker</a></p> -->
+                <!-- <p><a href="https://www.instagram.com/suchmuch.urdu/"  target="_blank" class="readmore">Visit Suchmuch Urdu</a></p> -->
               </div>
             </div>
           </div>
