--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+            <a href="shop-qatar.html" class="item-wrap fancybox">
               <img class="img-fluid" src="assets/img/img_2.jpg">
               <div class="work-info">
                 <h3>Shop Qatar</h3>
