--- a/safari-dino.html
+++ b/safari-dino.html
@@ -78,7 +78,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
             <h2 class="label">Dino Safari</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+            <p>Digital story illustration.</p>
           </div>
         </div>
       </div>
